Allow sleep and restart replay buffer on wakeup

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ members = ["obs-sys", "."]
 anyhow = "1.0.86"
 image = "0.25.1"
 obs-sys = { path = "./obs-sys" }
-winsafe = { git="https://github.com/Strackeror/winsafe", branch = "lastinputinfo", features = ["user", "kernel", "shell"] }
+retour = "0.3.1"
+winsafe = { git="https://github.com/Strackeror/winsafe", branch = "lastinputinfo", features = ["user", "kernel", "shell", "gui"] }
 [lib]
 crate-type = ["cdylib"]
